Changelog
=========

1.7.1 - Unreleased
------------------

- Fixes step 2 wizard error in required field.
  [Cesar Gonzalez]

- Fixes upgrade step source number in configure.zcml.
  [Cesar Gonzalez]

- Current folder is the default destination for "Create Wizard".
  [Marcin Staniszczak, Jose Dinuncio]

- Fixes "File Under" tags position.
  [Cesar Gonzalez]

- Makes "Create New" wizard tree selector lazy.
  [Jose Dinuncio]

- Changes Tree Navigation style -Home button design update-.
  [Cesar Gonzalez]

- Applies layout for Document content type (Wiki), add shadow image.
  [Cesar Gonzalez]

- Display only Group Portlets on our home dashboard view.
  [Vitaliy Podoba]

1.7 - March 20, 2013
--------------------

- Fixes bug in livesearch_reply.py.
  [Jose Dinuncio]

- Adds method post_and-index_object to replace WSAPI's post_object.
  [Jose Dinuncio]

1.6.9 - March 6, 2013
---------------------

- Fixes livesearch style when no result found, add collection icon to sprite.
  [Cesar Gonzalez]

- Adds viewlet for custom favicon links & apple touch icons links.
  [Cesar Gonzalez]

- Add Generic IFrame portlet.
  [Jose Dinuncio]

- Adds info for breadcrumbs and size in livesearch_reply.py
  [Jose Dinuncio]

- Adds fullname to livesearch result items.
  [Cesar Gonzalez]

- Adds style, content type icons to Live Search.
  [Cesar Gonzalez]

- Fixes display problem with document viewer and action menu.
  [Cesar Gonzalez]

- Fixes bug in RelatedRedmineTicketsViewlet.update trying to get UUID
  from RootSite.
  [Jose Dinuncio]

- Limits tree height and show scrollbars. Keep Ok button in position.
  [Cesar Gonzalez]

- Updates to make mobile site version work.
  [Vitaliy Podoba, Cesar Gonzalez]

- Make site root a dashboard.
  [Vitaliy Podoba]

- Refine Live Search Results
  [Cesar Gonzalez]

1.6.8 - February 14, 2013
-------------------------

- Style Cast and Chat links.
  [Cesar Gonzalez]

- Fixed styles for Document Table Of Contents viewlet.
  [Vitaliy Podoba]
