@@ -916,13 +916,13 @@ function loadCreateWizard(href, callback) {
 
       var $newform = jq(data).find('form[name=edit_form]');
 
-      $newform.find('fieldset').not('#fieldset-default').remove()
-              .find('.formTabs').remove()
-              .find('.editionComment').remove()
-              .find('.field:has(span.required)').addClass('wizard-required')
-              .find('#archetypes-fieldname-description').addClass('wizard-field')
-              .find('#archetypes-fieldname-title').addClass('wizard-field')
-              .find('.field:not(.wizard-required, .wizard-field)').hide();
+      $newform.find('fieldset').not('#fieldset-default').remove();
+      $newform.find('.formTabs').remove();
+      $newform.find('.editionComment').remove();
+      $newform.find('.field:has(span.required)').addClass('wizard-required');
+      $newform.find('#archetypes-fieldname-description').addClass('wizard-field');
+      $newform.find('#archetypes-fieldname-title').addClass('wizard-field');
+      $newform.find('.field:not(.wizard-required, .wizard-field)').hide();
 
       jq('#createWizard form[name="edit_form"]').remove();
       jq('.step2 .step-content').prepend($newform);
